--- a/articles.html
+++ b/articles.html
@@ -7,18 +7,18 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/2021c34ae2.js" crossorigin="anonymous"></script>
-    <link rel="icon" href="../images/favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="../styles/global.css">
-    <link rel="stylesheet" href="../styles/header.css">
-    <link rel="stylesheet" href="../styles/footer.css">
-    <link rel="stylesheet" href="../styles/articles.css">
+    <link rel="icon" href="images/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="styles/global.css">
+    <link rel="stylesheet" href="styles/header.css">
+    <link rel="stylesheet" href="styles/footer.css">
+    <link rel="stylesheet" href="styles/articles.css">
     <title>Bookshop</title>
 </head>
 <body>
     <header>
         <div class="fixed-header">
             <div class="logo">
-                <img src="../images/logo.png" width="80px" height="80px" alt="logo.png">
+                <img src="images/logo.png" width="80px" height="80px" alt="logo.png">
                 <h1>BOOK<br>SHOP</h1>
             </div>
             <div class="search-bar">
@@ -28,10 +28,10 @@
             </div>
             <nav>
                 <button class="burger-btn"><i></i></button>
-                <button class="index-btn"><i class="fa-solid fa-house"></i></button>
-                <button class="profile-btn"><i class="fa-solid fa-user"></i></button>
-                <button class="catalog-btn"><i class="fa-solid fa-list"></i></button>
-                <button class="cart-btn"><i class="fa-solid fa-cart-shopping"></i></button>
+                <button class="index-btn" href="/"><i class="fa-solid fa-house"></i></button>
+                <button class="profile-btn" href="/profile.html"><i class="fa-solid fa-user"></i></button>
+                <button class="catalog-btn" href="/catalog.html"><i class="fa-solid fa-list"></i></button>
+                <button class="cart-btn" href="/cart.html"><i class="fa-solid fa-cart-shopping"></i></button>
             </nav>
         </div>
         <div class="mobile-search-bar">
@@ -179,8 +179,8 @@
             <p>Copyright © 2023 Student MIREA. Все права защищены</p>
         </div>
     </footer>
-    <script src="../scripts/global.js"></script>
-    <script src="../scripts/header.js"></script>
-    <script src="../scripts/articles.js"></script>
+    <script src="scripts/global.js"></script>
+    <script src="scripts/header.js"></script>
+    <script src="scripts/articles.js"></script>
 </body>
 </html>
