--- a/articles.html
+++ b/articles.html
@@ -28,10 +28,10 @@
             </div>
             <nav>
                 <button class="burger-btn"><i></i></button>
-                <button class="index-btn" href="/"><i class="fa-solid fa-house"></i></button>
-                <button class="profile-btn" href="/profile.html"><i class="fa-solid fa-user"></i></button>
-                <button class="catalog-btn" href="/catalog.html"><i class="fa-solid fa-list"></i></button>
-                <button class="cart-btn" href="/cart.html"><i class="fa-solid fa-cart-shopping"></i></button>
+                <button class="index-btn"><i class="fa-solid fa-house"></i></button>
+                <button class="profile-btn"><i class="fa-solid fa-user"></i></button>
+                <button class="catalog-btn"><i class="fa-solid fa-list"></i></button>
+                <button class="cart-btn"><i class="fa-solid fa-cart-shopping"></i></button>
             </nav>
         </div>
         <div class="mobile-search-bar">
