--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
             </div>
             <nav>
                 <button class="burger-btn"><i></i></button>
-                <button class="profile-btn" href="/profile.html"><i class="fa-solid fa-user"></i></button>
-                <button class="catalog-btn" href="/catalog.html"><i class="fa-solid fa-list"></i></button>
-                <button class="articles-btn" href="/articles.html"><i class="fa-solid fa-newspaper"></i></button>
-                <button class="cart-btn" href="/cart.html"><i class="fa-solid fa-cart-shopping"></i><span>0</span></button>
+                <button class="profile-btn"><i class="fa-solid fa-user"></i></button>
+                <button class="catalog-btn"><i class="fa-solid fa-list"></i></button>
+                <button class="articles-btn"><i class="fa-solid fa-newspaper"></i></button>
+                <button class="cart-btn"><i class="fa-solid fa-cart-shopping"></i><span>0</span></button>
             </nav>
         </div>
         <div class="mobile-search-bar">
