--- a/profile.html
+++ b/profile.html
@@ -29,10 +29,10 @@
             </div>
             <nav>
                 <button class="burger-btn"><i></i></button>
-                <button class="index-btn" href="/"><i class="fa-solid fa-house"></i></button>
-                <button class="catalog-btn" href="/catalog.html"><i class="fa-solid fa-list"></i></button>
-                <button class="articles-btn" href="/articles.html"><i class="fa-solid fa-newspaper"></i></button>
-                <button class="cart-btn" href="/cart.html"><i class="fa-solid fa-cart-shopping"></i></button>
+                <button class="index-btn"><i class="fa-solid fa-house"></i></button>
+                <button class="catalog-btn"><i class="fa-solid fa-list"></i></button>
+                <button class="articles-btn"><i class="fa-solid fa-newspaper"></i></button>
+                <button class="cart-btn"><i class="fa-solid fa-cart-shopping"></i></button>
             </nav>
         </div>
         <div class="mobile-search-bar">
