Changed placeholder images

--- a/articles.html
+++ b/articles.html
@@ -44,97 +44,97 @@
             <div class="articles-list">
                 <div class="article">
                     <img class="blur-img" src="http://placehold.it/630x225" alt="" width="630px" height="225px">
-                    <img src="http://placehold.it/300x225" alt="" width="300px" height="225px">
+                    <img src="http://place-hold.it/300x225" alt="" width="300px" height="225px">
                     <span><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Est perspiciatis neque itaque delectus fuga necessitatibus, quod accusantium laborum. Consectetur similique vero, deserunt praesentium maiores reiciendis at unde quasi? A, doloribus.</p></span>
                     <p>Название</p>
                 </div>
                 <div class="article">
                     <img class="blur-img" src="http://placehold.it/630x225" alt="" width="630px" height="225px">
-                    <img src="http://placehold.it/300x225" alt="" width="300px" height="225px">
+                    <img src="http://place-hold.it/300x225" alt="" width="300px" height="225px">
                     <span><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Est perspiciatis neque itaque delectus fuga necessitatibus, quod accusantium laborum. Consectetur similique vero, deserunt praesentium maiores reiciendis at unde quasi? A, doloribus.</p></span>
                     <p>Название</p>
                 </div>
                 <div class="article">
                     <img class="blur-img" src="http://placehold.it/630x225" alt="" width="630px" height="225px">
-                    <img src="http://placehold.it/300x225" alt="" width="300px" height="225px">
+                    <img src="http://place-hold.it/300x225" alt="" width="300px" height="225px">
                     <span><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Est perspiciatis neque itaque delectus fuga necessitatibus, quod accusantium laborum. Consectetur similique vero, deserunt praesentium maiores reiciendis at unde quasi? A, doloribus.</p></span>
                     <p>Название</p>
                 </div>
                 <div class="article">
                     <img class="blur-img" src="http://placehold.it/630x225" alt="" width="630px" height="225px">
-                    <img src="http://placehold.it/300x225" alt="" width="300px" height="225px">
+                    <img src="http://place-hold.it/300x225" alt="" width="300px" height="225px">
                     <span><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Est perspiciatis neque itaque delectus fuga necessitatibus, quod accusantium laborum. Consectetur similique vero, deserunt praesentium maiores reiciendis at unde quasi? A, doloribus.</p></span>
                     <p>Название</p>
                 </div>
                 <div class="article">
                     <img class="blur-img" src="http://placehold.it/630x225" alt="" width="630px" height="225px">
-                    <img src="http://placehold.it/300x225" alt="" width="300px" height="225px">
+                    <img src="http://place-hold.it/300x225" alt="" width="300px" height="225px">
                     <span><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Est perspiciatis neque itaque delectus fuga necessitatibus, quod accusantium laborum. Consectetur similique vero, deserunt praesentium maiores reiciendis at unde quasi? A, doloribus.</p></span>
                     <p>Название</p>
                 </div>
                 <div class="article">
                     <img class="blur-img" src="http://placehold.it/630x225" alt="" width="630px" height="225px">
-                    <img src="http://placehold.it/300x225" alt="" width="300px" height="225px">
+                    <img src="http://place-hold.it/300x225" alt="" width="300px" height="225px">
                     <span><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Est perspiciatis neque itaque delectus fuga necessitatibus, quod accusantium laborum. Consectetur similique vero, deserunt praesentium maiores reiciendis at unde quasi? A, doloribus.</p></span>
                     <p>Название</p>
                 </div>
                 <div class="article">
                     <img class="blur-img" src="http://placehold.it/630x225" alt="" width="630px" height="225px">
-                    <img src="http://placehold.it/300x225" alt="" width="300px" height="225px">
+                    <img src="http://place-hold.it/300x225" alt="" width="300px" height="225px">
                     <span><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Est perspiciatis neque itaque delectus fuga necessitatibus, quod accusantium laborum. Consectetur similique vero, deserunt praesentium maiores reiciendis at unde quasi? A, doloribus.</p></span>
                     <p>Название</p>
                 </div>
                 <div class="article">
                     <img class="blur-img" src="http://placehold.it/630x225" alt="" width="630px" height="225px">
-                    <img src="http://placehold.it/300x225" alt="" width="300px" height="225px">
+                    <img src="http://place-hold.it/300x225" alt="" width="300px" height="225px">
                     <span><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Est perspiciatis neque itaque delectus fuga necessitatibus, quod accusantium laborum. Consectetur similique vero, deserunt praesentium maiores reiciendis at unde quasi? A, doloribus.</p></span>
                     <p>Название</p>
                 </div>
                 <div class="article">
                     <img class="blur-img" src="http://placehold.it/630x225" alt="" width="630px" height="225px">
-                    <img src="http://placehold.it/300x225" alt="" width="300px" height="225px">
+                    <img src="http://place-hold.it/300x225" alt="" width="300px" height="225px">
                     <span><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Est perspiciatis neque itaque delectus fuga necessitatibus, quod accusantium laborum. Consectetur similique vero, deserunt praesentium maiores reiciendis at unde quasi? A, doloribus.</p></span>
                     <p>Название</p>
                 </div>
                 <div class="article">
                     <img class="blur-img" src="http://placehold.it/630x225" alt="" width="630px" height="225px">
-                    <img src="http://placehold.it/300x225" alt="" width="300px" height="225px">
+                    <img src="http://place-hold.it/300x225" alt="" width="300px" height="225px">
                     <span><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Est perspiciatis neque itaque delectus fuga necessitatibus, quod accusantium laborum. Consectetur similique vero, deserunt praesentium maiores reiciendis at unde quasi? A, doloribus.</p></span>
                     <p>Название</p>
                 </div>
                 <div class="article">
                     <img class="blur-img" src="http://placehold.it/630x225" alt="" width="630px" height="225px">
-                    <img src="http://placehold.it/300x225" alt="" width="300px" height="225px">
+                    <img src="http://place-hold.it/300x225" alt="" width="300px" height="225px">
                     <span><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Est perspiciatis neque itaque delectus fuga necessitatibus, quod accusantium laborum. Consectetur similique vero, deserunt praesentium maiores reiciendis at unde quasi? A, doloribus.</p></span>
                     <p>Название</p>
                 </div>
                 <div class="article">
                     <img class="blur-img" src="http://placehold.it/630x225" alt="" width="630px" height="225px">
-                    <img src="http://placehold.it/300x225" alt="" width="300px" height="225px">
+                    <img src="http://place-hold.it/300x225" alt="" width="300px" height="225px">
                     <span><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Est perspiciatis neque itaque delectus fuga necessitatibus, quod accusantium laborum. Consectetur similique vero, deserunt praesentium maiores reiciendis at unde quasi? A, doloribus.</p></span>
                     <p>Название</p>
                 </div>
                 <div class="article">
                     <img class="blur-img" src="http://placehold.it/630x225" alt="" width="630px" height="225px">
-                    <img src="http://placehold.it/300x225" alt="" width="300px" height="225px">
+                    <img src="http://place-hold.it/300x225" alt="" width="300px" height="225px">
                     <span><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Est perspiciatis neque itaque delectus fuga necessitatibus, quod accusantium laborum. Consectetur similique vero, deserunt praesentium maiores reiciendis at unde quasi? A, doloribus.</p></span>
                     <p>Название</p>
                 </div>
                 <div class="article">
                     <img class="blur-img" src="http://placehold.it/630x225" alt="" width="630px" height="225px">
-                    <img src="http://placehold.it/300x225" alt="" width="300px" height="225px">
+                    <img src="http://place-hold.it/300x225" alt="" width="300px" height="225px">
                     <span><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Est perspiciatis neque itaque delectus fuga necessitatibus, quod accusantium laborum. Consectetur similique vero, deserunt praesentium maiores reiciendis at unde quasi? A, doloribus.</p></span>
                     <p>Название</p>
                 </div>
                 <div class="article">
                     <img class="blur-img" src="http://placehold.it/630x225" alt="" width="630px" height="225px">
-                    <img src="http://placehold.it/300x225" alt="" width="300px" height="225px">
+                    <img src="http://place-hold.it/300x225" alt="" width="300px" height="225px">
                     <span><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Est perspiciatis neque itaque delectus fuga necessitatibus, quod accusantium laborum. Consectetur similique vero, deserunt praesentium maiores reiciendis at unde quasi? A, doloribus.</p></span>
                     <p>Название</p>
                 </div>
                 <div class="article">
                     <img class="blur-img" src="http://placehold.it/630x225" alt="" width="630px" height="225px">
-                    <img src="http://placehold.it/300x225" alt="" width="300px" height="225px">
+                    <img src="http://place-hold.it/300x225" alt="" width="300px" height="225px">
                     <span><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Est perspiciatis neque itaque delectus fuga necessitatibus, quod accusantium laborum. Consectetur similique vero, deserunt praesentium maiores reiciendis at unde quasi? A, doloribus.</p></span>
                     <p>Название</p>
                 </div>
