--- a/cart.html
+++ b/cart.html
@@ -48,7 +48,7 @@
             <div class="items">
                 <div class="item">
                     <div>
-                        <img src="http://placehold.it/113x150" alt="" width="113px" height="150px">
+                        <img src="http://place-hold.it/113x150" alt="" width="113px" height="150px">
                         <div class="item-info">
                             <h4>Название</h4>
                             <p>Автор</p>
@@ -65,7 +65,7 @@
                 </div>
                 <div class="item">
                     <div>
-                        <img src="http://placehold.it/113x150" alt="" width="113px" height="150px">
+                        <img src="http://place-hold.it/113x150" alt="" width="113px" height="150px">
                         <div class="item-info">
                             <h4>Название</h4>
                             <p>Автор</p>
@@ -82,7 +82,7 @@
                 </div>
                 <div class="item">
                     <div>
-                        <img src="http://placehold.it/113x150" alt="" width="113px" height="150px">
+                        <img src="http://place-hold.it/113x150" alt="" width="113px" height="150px">
                         <div class="item-info">
                             <h4>Название</h4>
                             <p>Автор</p>
@@ -99,7 +99,7 @@
                 </div>
                 <div class="item">
                     <div>
-                        <img src="http://placehold.it/113x150" alt="" width="113px" height="150px">
+                        <img src="http://place-hold.it/113x150" alt="" width="113px" height="150px">
                         <div class="item-info">
                             <h4>Название</h4>
                             <p>Автор</p>
