--- a/profile.html
+++ b/profile.html
@@ -137,7 +137,7 @@
                     </div>
                     <div class="active-orders">
                         <div class="order">
-                            <img src="http://placehold.it/113x150" alt="" width="113px" height="150px">
+                            <img src="http://place-hold.it/113x150" alt="" width="113px" height="150px">
                             <h4>Название</h4>
                             <p>Цена <b>999</b></p>
                             <p>Статус <b>В пути</b></p>
@@ -145,7 +145,7 @@
                             <button>Подробнее</button>
                         </div>
                         <div class="order">
-                            <img src="http://placehold.it/113x150" alt="" width="113px" height="150px">
+                            <img src="http://place-hold.it/113x150" alt="" width="113px" height="150px">
                             <h4>Название</h4>
                             <p>Цена <b>999</b></p>
                             <p>Статус <b>В пути</b></p>
@@ -153,7 +153,7 @@
                             <button>Подробнее</button>
                         </div>
                         <div class="order">
-                            <img src="http://placehold.it/113x150" alt="" width="113px" height="150px">
+                            <img src="http://place-hold.it/113x150" alt="" width="113px" height="150px">
                             <h4>Название</h4>
                             <p>Цена <b>999</b></p>
                             <p>Статус <b>В пути</b></p>
@@ -161,7 +161,7 @@
                             <button>Подробнее</button>
                         </div>
                         <div class="order">
-                            <img src="http://placehold.it/113x150" alt="" width="113px" height="150px">
+                            <img src="http://place-hold.it/113x150" alt="" width="113px" height="150px">
                             <h4>Название</h4>
                             <p>Цена <b>999</b></p>
                             <p>Статус <b>В пути</b></p>
@@ -169,7 +169,7 @@
                             <button>Подробнее</button>
                         </div>
                         <div class="order">
-                            <img src="http://placehold.it/113x150" alt="" width="113px" height="150px">
+                            <img src="http://place-hold.it/113x150" alt="" width="113px" height="150px">
                             <h4>Название</h4>
                             <p>Цена <b>999</b></p>
                             <p>Статус <b>В пути</b></p>
@@ -177,7 +177,7 @@
                             <button>Подробнее</button>
                         </div>
                         <div class="order">
-                            <img src="http://placehold.it/113x150" alt="" width="113px" height="150px">
+                            <img src="http://place-hold.it/113x150" alt="" width="113px" height="150px">
                             <h4>Название</h4>
                             <p>Цена <b>999</b></p>
                             <p>Статус <b>В пути</b></p>
@@ -190,7 +190,7 @@
                     </div>
                     <div class="complete-orders">
                         <div class="order">
-                            <img src="http://placehold.it/113x150" alt="" width="113px" height="150px">
+                            <img src="http://place-hold.it/113x150" alt="" width="113px" height="150px">
                             <h4>Название</h4>
                             <p>Цена <b>999</b></p>
                             <p>Статус <b>Завершен</b></p>
@@ -198,7 +198,7 @@
                             <button>Подробнее</button>
                         </div>
                         <div class="order">
-                            <img src="http://placehold.it/113x150" alt="" width="113px" height="150px">
+                            <img src="http://place-hold.it/113x150" alt="" width="113px" height="150px">
                             <h4>Название</h4>
                             <p>Цена <b>999</b></p>
                             <p>Статус <b>Завершен</b></p>
@@ -206,7 +206,7 @@
                             <button>Подробнее</button>
                         </div>
                         <div class="order">
-                            <img src="http://placehold.it/113x150" alt="" width="113px" height="150px">
+                            <img src="http://place-hold.it/113x150" alt="" width="113px" height="150px">
                             <h4>Название</h4>
                             <p>Цена <b>999</b></p>
                             <p>Статус <b>Завершен</b></p>
@@ -214,7 +214,7 @@
                             <button>Подробнее</button>
                         </div>
                         <div class="order">
-                            <img src="http://placehold.it/113x150" alt="" width="113px" height="150px">
+                            <img src="http://place-hold.it/113x150" alt="" width="113px" height="150px">
                             <h4>Название</h4>
                             <p>Цена <b>999</b></p>
                             <p>Статус <b>Завершен</b></p>
@@ -222,7 +222,7 @@
                             <button>Подробнее</button>
                         </div>
                         <div class="order">
-                            <img src="http://placehold.it/113x150" alt="" width="113px" height="150px">
+                            <img src="http://place-hold.it/113x150" alt="" width="113px" height="150px">
                             <h4>Название</h4>
                             <p>Цена <b>999</b></p>
                             <p>Статус <b>Завершен</b></p>
