Added group and name to the footer

--- a/articles.html
+++ b/articles.html
@@ -176,7 +176,7 @@
             </address>
         </div>
         <div class="copyright">
-            <p>Copyright © 2023 Student MIREA. Все права защищены</p>
+            <p>Copyright © 2023 ИКБО-30-22 Азимов А.Н. Все права защищены</p>
         </div>
     </footer>
     <script src="scripts/global.js"></script>
